fix font size on small displays

--- a/css/main.scss
+++ b/css/main.scss
@@ -206,7 +206,7 @@ section {
             margin: var(--collage-gap);
             border-radius: 2vw;
             background-color: var(--accent);
-            font-size: calc(1.9em - 0.5vw);
+            font-size: calc(1em + 0.25vw);
             text-align: justify;
 
             h2 {
